# 2026q3-backend-senfio

./: .dockerignore  .env.example  .gitignore  .woodpecker.yaml  AGENTS.md  Dockerfile  Makefile  README.md  anotações.txt  dev.docker-compose.yml  docker-compose.yml  mise.toml  pyproject.toml
docs/: API.md  HISTORIA.md  TODO.md
docs/BRs/: BR-001-disponibilidade-de-capsulas.md  BR-002-reservas-e-retiradas.md  BR-003-eventos-externos.md  BR-004-perfis-e-permissoes.md  BR-005-trilha-de-auditoria.md  BR-006-devolucao-e-expiracao.md  BR-007-timeline-e-auditoria-completa.md  BR-008-operacao-e-plataforma.md
docs/PRDs/: PRD-001-catalogo-e-reservas.md
src/config/: settings.py  urls.py
src/scents/: admin.py  authentication.py  models.py  permissions.py  serializers.py  views.py
src/scents/management/commands/: expire_reservations.py  seed.py
src/scents/migrations/: 0001_initial.py  0002_museumprofile_statuschange.py  0003_externalevent_unique_external_event.py
src/tests/: conftest.py  test_capsules.py  test_permissions.py  test_reports.py  test_reservations.py  test_webhooks.py
