[project]
name = "museu-cheiros-api"
version = "0.1.0"
description = "API fictícia para desafio técnico Django/DRF"
requires-python = ">=3.12"
dependencies = [
  "django>=5.0,<5.3",
  "djangorestframework>=3.15,<3.17",
  "django-filter>=24.2,<25.0",
  "dj-database-url>=2.2,<3.0",
  "psycopg[binary]>=3.2,<4.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-django>=4.8,<5.0",
  "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["src"]
testpaths = ["src/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501"]
